--- a/index.html
+++ b/index.html
@@ -24,16 +24,19 @@
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a>.</p>
         <![endif]-->
 		<div class="container">
-		
+			
 			<div class="main_content">
 				<!-- Add your site or application content here -->
-				<article class="photo">
-					<img src="http://placehold.it/944x250">
-				</article>
+
 				<article>
-					<header>
+					<header class="clearfix">
 						<h1 class="title">HTML Ipsum Presents</h1>
-						<div class="float-right"><a href="#">Twitter</a> | <a href="#">Facebook</a> | <a href="#">G+</a> | <a href="#">LinkedIn</a></div>
+						<div class="float-left article-infos">
+							<span>12 July</span> - <span>3 Comments</span> - <span><em>Category 1</em> <em>Category 2</em> <em>Category 3</em></span>
+						</div>
+						<div class="float-right">
+							<a href="#">Twitter</a> | <a href="#">Facebook</a> | <a href="#">G+</a> | <a href="#">LinkedIn</a>
+						</div>
 					</header>
 					<p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
 
@@ -76,6 +79,9 @@
 					<h5>This is an heading h5</h5>
 					<h6>This is an heading h6</h6>
 				
+				</article>
+				<article class="photo">
+					<img src="http://placehold.it/944x350">
 				</article>
 			</div><!-- End Main Content -->
 		</div><!-- End Container -->
