--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 				<article>
 					<header class="clearfix">
-						<h1 class="title">HTML Ipsum Presents</h1>
+						<h1 class="title"><a href="#">This is the title of the article</a></h1>
 						<div class="float-left article-infos">
 							<span>12 July</span> - <span>3 Comments</span> - <span><em>Category 1</em> <em>Category 2</em> <em>Category 3</em></span>
 						</div>
@@ -38,8 +38,21 @@
 							<a href="#">Twitter</a> | <a href="#">Facebook</a> | <a href="#">G+</a> | <a href="#">LinkedIn</a>
 						</div>
 					</header>
+					<p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p><div class="float-right"><h6 class="text-complementar"><em><a href="#">Read more...</a></em></h6></div>
+				</article>
+				
+				<article>
+					<header class="clearfix">
+						<h1 class="title"><a href="#">Another article</a></h1>
+						<div class="float-left article-infos">
+							<span>12 July</span> - <span>3 Comments</span> - <span><em>Category 1</em> <em>Category 2</em> <em>Category 3</em></span>
+						</div>
+						<div class="float-right">
+							<a href="#">Twitter</a> | <a href="#">Facebook</a> | <a href="#">G+</a> | <a href="#">LinkedIn</a>
+						</div>
+					</header>
+					<img src="http://placehold.it/944x350&text=article%20with%20image">
 					<p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p><div class="float-right"><h6 class="text-complementar"><em><a class="#">Read more...</a><em></h6></div>
-					
 				</article>
 			</div><!-- End Main Content -->
 		</div><!-- End Container -->
