--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
         <!--[if lt IE 10]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a>.</p>
         <![endif]-->
+		<header class="main">
+			<a href="#">ZoomingIn.net</a>
+		</header>
 		<div class="container">
-			
 			<div class="main_content home">
 				<!-- Add your site or application content here -->
 
@@ -57,7 +59,9 @@
 			</div><!-- End Main Content -->
 		</div><!-- End Container -->
 		<footer>
-		
+			<div class="footer-content">
+			
+			</div>
 		</footer>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
